# jvm-toxcore-c

./: .gitignore  .gitmodules  Makefile  build.gradle  build.sbt
.bsp/: sbt.json
cpp/: build.sbt
project/: plugins.sbt  scalapb.sbt
scripts/: android.mk  build-host  dependencies.mk  release.mk
src/main/cpp/: .gitignore  CMakeLists.txt  build_host_protobuf.sh
src/main/cpp/cmake/: protogen.cmake
src/main/java/im/tox/tox4j/impl/: ToxImplBase.kt
src/main/java/im/tox/tox4j/impl/jni/: ToxAvEventDispatch.kt  ToxAvImpl.kt  ToxAvJni.java  ToxAvProtoConverter.kt  ToxCoreEventDispatch.kt  ToxCoreImpl.kt  ToxCoreJni.java  ToxCoreProtoConverter.kt  ToxCryptoImpl.kt  ToxCryptoJni.java  ToxJniLog.kt  ToxLoadJniLibrary.kt
src/main/java/im/tox/tox4j/impl/jni/internal/: Event.kt
src/main/proto/: ProtoLog.proto
src/main/protobuf/: Av.proto  Core.proto  ProtoLog.proto
src/test/java/im/tox/core/random/: RandomCoreTest.scala
src/test/java/im/tox/tox4j/: ToxTest.scala
src/test/java/im/tox/tox4j/av/callbacks/: AvInvokeTest.scala
src/test/java/im/tox/tox4j/core/: JToxCoreTest.java  LoadSaveTest.scala  NetworkTest.scala  ToxCoreTest.scala
src/test/java/im/tox/tox4j/core/callbacks/: CoreInvokeTest.scala  ToxCoreEventAdapterTest.scala
src/test/java/im/tox/tox4j/core/exceptions/: ToxBootstrapExceptionTest.scala  ToxFileSendExceptionTest.scala  ToxFriendAddExceptionTest.scala  ToxFriendByPublicKeyExceptionTest.scala  ToxFriendCustomPacketExceptionTest.scala  ToxFriendDeleteExceptionTest.scala  ToxFriendGetPublicKeyExceptionTest.scala  ToxFriendSendMessageExceptionTest.scala  ToxGetPortExceptionTest.scala  ToxNewExceptionTest.scala  ToxSetInfoExceptionTest.scala  ToxSetTypingExceptionTest.scala
src/test/java/im/tox/tox4j/crypto/: ToxCryptoTest.scala
src/test/java/im/tox/tox4j/exceptions/: ToxExceptionTest.scala  ToxKilledExceptionTest.scala
src/test/java/im/tox/tox4j/impl/jni/: BadInstanceNumberTest.scala  FinalizerTest.scala  NamingConventionsTest.scala  ToxJniLogTest.scala
src/test/java/im/tox/tox4j/impl/jni/internal/: EventTest.scala
src/test/java/im/tox/tox4j/testing/autotest/: AliceBobTestBase.scala  AutoTestSuite.scala
